cabal-version: 2.2
name: actus-core
version: 0.1.0.0
license: Apache-2.0
license-files:
  LICENSE
  NOTICE
build-type: Simple
maintainer: Yves Hauser <yves.hauser@iohk.io>
stability: experimental
author: Dmytro Kondratiuk, Yves Hauser
synopsis:
  ACTUS taxonomy
description:
  /actus-core/ is an implementation of the [ACTUS](https://www.actusfrf.org)
  specification in Haskell.
  .
  ACTUS is a [taxonomy](https://www.actusfrf.org/taxonomy) of financial contracts that
  uniformly specifies projected cash flows per contract type. A contract is evolved
  over time, i.e. state changes are triggered from event schedules and performed by
  state transformation functions, projected cash flows are determined by payoff
  functions. Future contract state and payoff might depend on observable risk factors.
  .
  The implementation is tested against the [reference test cases](https://github.com/actusfrf/actus-tests) provided by the
  ACTUS foundation.

category: Language
extra-doc-files: README.md

source-repository head
  type: git
  location: https://github.com/input-output-hk/actus-core

flag defer-plugin-errors
  description:
      Defer errors from the plugin, useful for things like Haddock that can't handle it.
  default: False
  manual: True

library
  hs-source-dirs: src
  build-depends:
    aeson -any,
    base -any,
    mtl -any,
    sort -any,
    lens -any,
    text -any,
    time -any,
    validation -any
  default-language: Haskell2010
  default-extensions: ExplicitForAll ScopedTypeVariables
                      DeriveGeneric StandaloneDeriving DeriveLift
                      DeriveFunctor DeriveFoldable
                      DeriveTraversable
  exposed-modules:
    Actus.Core
    Actus.Domain
    Actus.Model
    Actus.Utility
  other-modules:
    Actus.Domain.BusinessEvents
    Actus.Domain.ContractTerms
    Actus.Domain.ContractState
    Actus.Domain.Schedule
    Actus.Model.Applicability
    Actus.Model.ContractSchedule
    Actus.Model.Payoff
    Actus.Model.StateInitialization
    Actus.Model.StateTransition
    Actus.Utility.ANN.Annuity
    Actus.Utility.DateShift
    Actus.Utility.ScheduleGenerator
    Actus.Utility.YearFraction
  ghc-options:
    -Wall -Wnoncanonical-monad-instances -Wunused-packages
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities

test-suite actus-core-test
  default-language: Haskell2010
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Spec.TestFramework
  build-depends:
    actus-core,
    aeson -any,
    base >=4.9 && <5,
    bytestring -any,
    containers -any,
    lens -any,
    mtl -any,
    pretty-simple -any,
    sort -any,
    tasty -any,
    tasty-hunit -any,
    tasty-quickcheck -any,
    text -any,
    time -any,
    validation -any,
  ghc-options:
    -Wall -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wredundant-constraints -Widentities
